--- a/NestingAssistant.Desktop/NestingAssistant.Desktop.csproj
+++ b/NestingAssistant.Desktop/NestingAssistant.Desktop.csproj
@@ -5,10 +5,12 @@
     One for Windows with net7.0-windows TFM, one for MacOS with net7.0-macos and one with net7.0 TFM for Linux.-->
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
+	  <PublishSingleFile>true</PublishSingleFile>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <AssemblyVersion>1.24.7.0</AssemblyVersion>
     <FileVersion>1.24.7.0</FileVersion>
+	 
   </PropertyGroup>
 
   <ItemGroup>
