--- a/NestingAssistant/NestingAssistant.csproj
+++ b/NestingAssistant/NestingAssistant.csproj
@@ -23,6 +23,8 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.0" />
     <PackageReference Include="Irihi.Ursa" Version="1.0.0-rc1" />
     <PackageReference Include="Irihi.Ursa.Themes.Semi" Version="1.0.0-rc1" />
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="MiniExcel" Version="1.34.0" />
     <PackageReference Include="Semi.Avalonia" Version="11.1.0" />
