--- a/ProfileOptimizer/ProfileOptimizer.csproj
+++ b/ProfileOptimizer/ProfileOptimizer.csproj
@@ -12,4 +12,8 @@
     <Folder Include="Analysis\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="GeneticSharp" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
