--- a/NestingAssistant/NestingAssistant.csproj
+++ b/NestingAssistant/NestingAssistant.csproj
@@ -13,10 +13,6 @@
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
 
-  
-  <ItemGroup>
-    <None Remove="ExcelTemplates\ProfileNestingSummaryTemplate.xlsx" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.1.1" />
@@ -41,9 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AvaloniaResource Include="ExcelTemplates\ProfileNestingSummaryTemplate.xlsx">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </AvaloniaResource>
+    <EmbeddedResource Include="ExcelTemplates\ProfileNestingSummaryTemplate.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
